# GovDocVerify

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FAA_Style_Manual.md  ISSUES.md  LICENSE  Makefile  NEW_STRUCTURE.md  PRD.md  README.md  ROADMAP.md  SECURITY.md  __init__.py  app.py  cli.py  condaenv.joyn3ixn.requirements.txt  developer_doc.md  document_check_result.py  document_checker.py  environment.yml  format_checks.py  gradio_ui.py  logger.py  mkdocs.yml  package-lock.json  package.json  patterns.json  patterns.json.README.txt  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  setup.cfg  setup.py  test_format_checks.py  valid_words.txt
.dev/: AGENTS.md  BANDIT.md  CONFIG_ISSUES.md  ISSUES.md  NEW_STRUCTURE.md  PERFORMANCE_REPORT.md  PRD.md  REVIEW.md  TASKS.md  TRACEABILITY.md  VERIFICATION_REPORT.md
.dev/ADRs/: 0001-toolchain.md  0002-folder-structure.md  0003-interfaces.md  0004-metadata-display.md
.github/workflows/: agents.yml.disabled  check-file-size.yml  ci.yml  sync-to-hub.yml
ADR/: 20250721-ci-skeleton.md
backend/: api.py  cli.py  graceful.py  main.py  requirements.txt
checks/: __init__.py  format_checks.py  heading_checks.py  terminology_checks.py
docs/: api-reference.md  checks.md  developer-guide.md  getting-started.md  index.md  plugins.md  scenarios.md
documentcheckertool/: __init__.py  app.py  cli.py  constants.py  document_checker.py  export.py  logging_config.py  models.py  processing.py  server_cli.py
documentcheckertool/checkers/: structure_checker.py
documentcheckertool/checks/: __init__.py  accessibility_checks.py  acronym_checks.py  base_checker.py  check_registry.py  format_checks.py  heading_checks.py  readability_checks.py  reference_checks.py  structure_checks.py  terminology_checks.py
documentcheckertool/config/: boilerplate_texts.py  deprecated_urls.py  document_config.py  terminology.json  terminology_rules.py  validation_patterns.py
documentcheckertool/docs/: developer_doc.md  metadata_fields.py  metadata_fields_stub.py
documentcheckertool/formatters/: formatting.py  validation_formatter.py
documentcheckertool/formatting/: document_formatter.py
documentcheckertool/interfaces/: __main__.py  gradio_ui.py
documentcheckertool/models/: __init__.py  checker_result.py
documentcheckertool/utils/: __init__.py  boilerplate_utils.py  check_discovery.py  decorators.py  formatting.py  link_utils.py  pattern_cache.py  security.py  terminology_utils.py  text_utils.py
frontend/faa-doc-checker/: package-lock.json  package.json
frontend/faa-doc-checker/node_modules (# Name clash 2025-05-25 vlyciaC #)/: .package-lock.json
frontend/faa-doc-checker/src/: App.tsx
frontend/govdocverify/: package-lock.json  package.json  vite.config.ts
frontend/govdocverify/src/: App.tsx
govdocverify/: __init__.py  cli.py  document_checker.py  export.py  logging_config.py  models.py  server_cli.py
govdocverify/checks/: accessibility_checks.py  base_checker.py  format_checks.py  heading_checks.py  reference_checks.py  structure_checks.py  terminology_checks.py
govdocverify/config/: boilerplate_texts.py  document_config.py  terminology.json
govdocverify/formatting/: document_formatter.py
govdocverify/models/: __init__.py
govdocverify/plugins/: base.py
govdocverify/utils/: __init__.py  check_discovery.py  decorators.py  formatting.py  link_utils.py  metadata_utils.py  network.py  security.py  terminology_utils.py  text_utils.py
interfaces/: gradio_ui.py
perf/artifacts/: build_results_dict.txt
scripts/: ci_batch.py  compute_trace_coverage.py  lint_staged.py  next-agent.sh  profile_build_results_dict.py  profile_processing.py  run_pytest_with_coverage.py  setup_env.sh
src/: documentcheckertool
src/govdocverify/: __init__.py  cli.py  constants.py  document_checker.py  export.py  logging_config.py  models.py  processing.py
src/govdocverify/checks/: __init__.py  accessibility_checks.py  acronym_checks.py  format_checks.py  heading_checks.py  (+4 more)
tests/: __init__.py  conftest.py  test_accessibility_checks.py  test_acronym_checker.py  test_acronyms.py  test_api_documentation.py  test_backend_api.py  test_backend_cli.py  test_base.py  test_check_registry.py  test_checker_result_model.py  test_ci_scenarios.py  test_cli.py  test_content_checks.py  test_cross_references.py  test_decorators.py  test_deprecated_links.py  test_dev_environment.py  test_document_checker.py  test_document_formatter.py  test_e2e_scenarios.py  test_export_unicode.py  test_format_checks.py  test_formats.py  test_formatting.py  test_frontend_placeholder.py  test_full_checker_integration.py  test_gradio_ui.py  test_h11_version.py  test_heading_checks.py  test_headings.py  test_logging_config.py  test_metadata_documentation.py  test_metadata_utils.py  test_models.py  test_models_root.py  test_models_updates.py  test_network_timeout.py  test_new_coverage.py  test_new_failures.py  (+20 more)
tests/property/: test_export_prop.py  test_extract_docx_metadata.py  test_result_formatter_prop.py
tests/test_data/: invalid_508_compliance.docx  invalid_acronym_usage.docx  invalid_acronyms.docx  invalid_dates.docx  invalid_headings.docx  invalid_paragraph_length.docx  invalid_parentheses.docx  invalid_period_headings.docx  invalid_periods.docx  invalid_phone_numbers.docx  invalid_placeholders.docx  invalid_readability.docx  invalid_section_symbols.docx  invalid_sentence_length.docx  invalid_sequence.docx  invalid_spacing.docx  invalid_terminology.docx  valid_508_compliance.docx  valid_acronym_usage.docx  valid_acronyms.docx  valid_dates.docx  valid_paragraph_length.docx  valid_parentheses.docx  valid_period_headings.docx  valid_periods.docx  valid_phone_numbers.docx  valid_placeholders.docx  valid_readability.docx  valid_section_symbols.docx  valid_sentence_length.docx  valid_sequence.docx  valid_spacing.docx  valid_terminology.docx
tests/test_files/: test_accessibility.md  test_acronyms.txt
tests/unit/: test_export.py  test_server_cli.py
utils/: formatting.py  pattern_cache.py  security.py
(+31 files in other folders)
