# ── Build & core metadata ─────────────────────────────────────────────────────
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "govdocverify"
version         = "0.1.0"
description     = "Tool for checking documents against Federal writing standards."
license         = {text = "GPL-3.0-only"}
requires-python = ">=3.11,<4.0"

dependencies = [
  "fastapi>=0.109.1",
  "starlette>=0.40.0",
  "python-docx>=0.8.11",
  "beautifulsoup4>=4.12.0",
  "pdfkit>=1.0.0",
  "nltk>=3.9.1",
  "pandas>=2.2.1",
  "numpy>=1.24.3",
  "pydantic>=2.11.4",
  "colorama>=0.4.6",
  "typing-extensions>=4.9.0",
  "filetype>=1.2.0",
  "python-multipart>=0.0.20",
  "zipp==3.19.1",
  "anyio>=4.4.0",
  "httpx>=0.27,<0.28",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
  "mypy>=1.10",
  "pytest>=8",
  "pytest-cov>=5",
  "hypothesis>=6",
  "bandit[toml]>=1.8.5",
  "semgrep>=1.123.0",
  "pip-audit>=2.7",
  "pre-commit>=3.7",
  "uvicorn>=0.30", 
]
format   = ["ruff>=0.5"]
lint     = ["ruff>=0.5"]
typing   = ["mypy>=1.10"]
test     = ["pytest>=8", "pytest-cov>=5", "hypothesis>=6"]
security = ["bandit[toml]>=1.8.5", "semgrep>=1.123.0", "pip-audit>=2.7"]
qa       = ["pre-commit>=3.7"]

[[project.authors]]
name  = "Eric Putnam"
email = "contact@example.com"

# ── Package discovery ─────────────────────────────────────────────────────────
[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", ".dev*"]

# ── Code style / linting ──────────────────────────────────────────────────────
[tool.black]
line-length    = 100
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length    = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I"]

# ── Static typing ─────────────────────────────────────────────────────────────
[tool.mypy]
python_version            = "3.12"
packages                  = ["govdocverify"]
strict                    = true
warn_return_any           = true
warn_unused_configs       = true
disallow_untyped_defs     = true
disallow_incomplete_defs  = true
check_untyped_defs        = true
disallow_untyped_decorators = true
no_implicit_optional      = true
warn_redundant_casts      = true
warn_unused_ignores       = true
warn_no_return            = true
warn_unreachable          = true
ignore_missing_imports    = true
exclude                   = ["^govdocverify/"]
# Relax type checking for test modules to avoid thousands of
# missing annotation errors during the dev gate.
[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["app", "backend.api"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["govdocverify.*"]
ignore_errors = true

# Temporarily disable the Pydantic mypy plugin due to instability
# in the current environment.
#plugins                   = ["pydantic.mypy"]

# ── Security scanning ────────────────────────────────────────────────────────
[tool.bandit]
targets      = ["govdocverify"]
exclude_dirs = ["tests"]
skips        = ["B101"]

# Example per-plugin tuning (optional)
[tool.bandit.any_other_function_with_shell_equals_true]
no_shell = ["os.execl", "os.execle", "os.spawnl", "os.spawnv"]
shell    = ["os.system", "subprocess.Popen"]

# ── Test configuration ────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths     = ["tests"]
python_files  = "test_*.py"
markers       = [
  "property: property-based tests",
  "e2e: end-to-end tests",
]

# ── Dead-code detection (vulture) ─────────────────────────────────────────────
[tool.vulture]
exclude         = ["tests/*", "setup.py"]
min-confidence  = 100
